--- a/index.html
+++ b/index.html
@@ -290,8 +290,8 @@ title: Math, Sonification, Plots
             display:inline-block;
             //float:left;
             overflow-y: scroll;
-            padding: 0px 10px 0px 10px;
-            border: 3px solid #73AD21;
+            //padding: 0px 10px 0px 10px;
+            //border: 3px solid #73AD21;
         }
     </style>
 </head>
