--- a/index.html
+++ b/index.html
@@ -286,10 +286,11 @@ title: Math, Sonification, Plots
             //float:left;
             
             width: 70%;
-            height: 200px;
+            //height: 200px;
+            height: 100%;
             display:inline-block;
             //float:left;
-            overflow-y: scroll;
+            //overflow-y: scroll;
             //padding: 0px 10px 0px 10px;
             //border: 3px solid #73AD21;
         }
