--- a/index.html
+++ b/index.html
@@ -285,12 +285,13 @@ title: Math, Sonification, Plots
             //height:400px;
             //float:left;
             
-            width: 40%;
+            width: 70%;
             //height: 200px;
             height: 100%;
             display:inline-block;
             //float:left;
-            //overflow-y: scroll;
+            position:absolute;
+            overflow-y: scroll;
             //padding: 0px 10px 0px 10px;
             //border: 3px solid #73AD21;
         }
