--- a/index.html
+++ b/index.html
@@ -290,7 +290,7 @@ title: Math, Sonification, Plots
             height: 100%;
             display:inline-block;
             //float:left;
-            position:absolute;
+            position:relative;
             //overflow-y: scroll;
             //padding: 0px 10px 0px 10px;
             //border: 3px solid #73AD21;
