--- a/index.html
+++ b/index.html
@@ -291,7 +291,7 @@ title: Math, Sonification, Plots
             display:inline-block;
             //float:left;
             position:relative;
-            //overflow-y: scroll;
+            overflow-y: scroll;
             //padding: 0px 10px 0px 10px;
             //border: 3px solid #73AD21;
         }
