--- a/index.html
+++ b/index.html
@@ -286,8 +286,8 @@ title: Math, Sonification, Plots
             //float:left;
             
             width: 70%;
-            //height: 200px;
-            height: 100%;
+            height: 200px;
+            //height: 100%;
             display:inline-block;
             //float:left;
             position:relative;
