--- a/index.html
+++ b/index.html
@@ -275,6 +275,7 @@ title: Math, Sonification, Plots
             
             width: 220px;
             height: 100%;
+            transform: scale(.5, .5);
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
@@ -317,12 +318,11 @@ title: Math, Sonification, Plots
         target="_blank">survey</a>.
     </p></div>
     <div><p>
-        The results from the survey will augment research for developing better technologies that improve the 
-        user experience for accessing digital media by the visually impaired. The culmination of this project 
-        will be a published 
+        The results from the survey will advance research for developing better technologies that improve 
+        accessibility to digital media by the visually impaired. This project will culminate with a paper 
         <a href="/AssistiveTechnology_VisuallyImpaired.pdf"
         target="_blank">paper</a>
-        summarizing the objectives.
+        commensurable for publication.
     </p></div>
 
     <!-- img class="center fit" src="\images\ST_3D_Hyperbola.png" title="Graph of a 3-Dimensional Hyperbola w/o High Contrast" -->
