--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@ title: Math, Sonification, Plots
             
             width: 220px;
             height: 100%;
-            transform: scale(.5, .5);
+            // transform: scale(.5, .5);
             // display:inline-block;
             float:left;
             border: 3px solid #73AD21;
@@ -291,7 +291,7 @@ title: Math, Sonification, Plots
             //height: 100%;
             display:inline-block;
             //float:left;
-            position:relative;
+            position:fixed;
             overflow-y: scroll;
             //padding: 0px 10px 0px 10px;
             //border: 3px solid #73AD21;
