--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@ title: Math, Sonification, Plots
             width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
-            // display:inline-block;
-            float:left;
+            display:inline-block;
+            // float:left;
             border: 3px solid #73AD21;
         }
 
@@ -288,13 +288,13 @@ title: Math, Sonification, Plots
             
             width: 70%;
             height: 200px;
-            //height: 100%;
+            // height: 100%;
             display:inline-block;
-            //float:left;
-            position:fixed;
-            overflow-y: scroll;
-            //padding: 0px 10px 0px 10px;
-            //border: 3px solid #73AD21;
+            // float:left;
+            // position:relative;
+            // overflow-y: scroll;
+            // padding: 0px 10px 0px 10px;
+            // border: 3px solid #73AD21;
         }
     </style>
 </head>
