--- a/index.html
+++ b/index.html
@@ -276,8 +276,8 @@ title: Math, Sonification, Plots
             width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
-            display:inline-block;
-            // float:left;
+            // display:inline-block;
+            float:left;
             border: 3px solid #73AD21;
         }
 
@@ -286,13 +286,13 @@ title: Math, Sonification, Plots
             //height:400px;
             //float:left;
             
-            width: 70%;
+            width: 200px;
             height: 200px;
             // height: 100%;
             display:inline-block;
             // float:left;
-            // position:relative;
-            // overflow-y: scroll;
+            position:absolute;
+            overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
         }
