--- a/index.html
+++ b/index.html
@@ -286,12 +286,12 @@ title: Math, Sonification, Plots
             //height:400px;
             //float:left;
             
-            width: 200px;
+            width: 500px;
             height: 200px;
             // height: 100%;
             display:inline-block;
             // float:left;
-            position:absolute;
+            // position:relative;
             overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
