--- a/index.html
+++ b/index.html
@@ -292,6 +292,7 @@ title: Math, Sonification, Plots
             display:inline-block;
             // float:left;
             // position:relative;
+            position:absolute;
             overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
