--- a/index.html
+++ b/index.html
@@ -291,8 +291,8 @@ title: Math, Sonification, Plots
             // height: 100%;
             display:inline-block;
             // float:left;
-            // position:relative;
-            position:absolute;
+            position:relative;
+            // position:absolute;
             overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
