--- a/index.html
+++ b/index.html
@@ -286,14 +286,17 @@ title: Math, Sonification, Plots
             //height:400px;
             //float:left;
             
-            width: 500px;
-            height: 200px;
+            // width: 500px;
+            // height: 200px;
+            width: 70%;
             // height: 100%;
             display:inline-block;
             // float:left;
-            position:relative;
+            // position:relative;
             // position:absolute;
-            overflow-y: scroll;
+            // overflow-y: scroll;
+            overflow: hidden;
+            white-space: nowrap;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
         }
