--- a/index.html
+++ b/index.html
@@ -277,7 +277,8 @@ title: Math, Sonification, Plots
             height: 100%;
             // transform: scale(.5, .5);
             // display:inline-block;
-            float:left;
+            display:table-row;
+            //float:left;
             border: 3px solid #73AD21;
         }
 
@@ -287,14 +288,15 @@ title: Math, Sonification, Plots
             //float:left;
             
             // width: 500px;
-            // height: 200px;
+            height: 200px;
             width: 70%;
             // height: 100%;
-            display:inline-block;
+            // display:inline-block;
+            display:table-row;
             // float:left;
             // position:relative;
             // position:absolute;
-            // overflow-y: scroll;
+            overflow-y: scroll;
             overflow: hidden;
             white-space: nowrap;
             // padding: 0px 10px 0px 10px;
