--- a/index.html
+++ b/index.html
@@ -297,10 +297,13 @@ title: Math, Sonification, Plots
             // position:relative;
             // position:absolute;
             overflow-y: scroll;
-            overflow: hidden;
-            white-space: nowrap;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
+        }
+
+        .myTable {
+            width:  100%;
+            height: 100%;
         }
     </style>
 </head>
