--- a/index.html
+++ b/index.html
@@ -347,6 +347,7 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
+    <div class="myTable">
         <div class="floatButton">
             <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
             <br>
@@ -362,6 +363,7 @@ title: Math, Sonification, Plots
                 Note that the native browser on iPhone does not support volume control from the application.
             </p></div>
         </div>
+    </div>
 
         <script>
             var playButton = document.getElementById("playButton")
