--- a/index.html
+++ b/index.html
@@ -277,8 +277,7 @@ title: Math, Sonification, Plots
             height: 100%;
             // transform: scale(.5, .5);
             // display:inline-block;
-            display:table-row;
-            //float:left;
+            float:left;
             border: 3px solid #73AD21;
         }
 
@@ -286,24 +285,18 @@ title: Math, Sonification, Plots
             //width:70%;
             //height:400px;
             //float:left;
-            
+
+            width: 100%;
             // width: 500px;
             height: 200px;
-            width: 70%;
             // height: 100%;
-            // display:inline-block;
-            display:table-row;
+            display:inline-block;
             // float:left;
             // position:relative;
             // position:absolute;
             overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
-        }
-
-        .myTable {
-            width:  100%;
-            height: 100%;
         }
     </style>
 </head>
@@ -347,7 +340,6 @@ title: Math, Sonification, Plots
 
         <audio id="audio" src="https://rbobkoskie3.github.io/sounds/hyperbola.mp4"></audio>
         <!-- input type="button" class="button" value="SONIFICATION" onclick="play()" -->
-    <div class="myTable">
         <div class="floatButton">
             <button id="playButton" class="play" onclick="play(this)">SONIFICATION</button>
             <br>
@@ -363,7 +355,6 @@ title: Math, Sonification, Plots
                 Note that the native browser on iPhone does not support volume control from the application.
             </p></div>
         </div>
-    </div>
 
         <script>
             var playButton = document.getElementById("playButton")
