--- a/index.html
+++ b/index.html
@@ -282,11 +282,11 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            //width:70%;
-            //height:400px;
-            //float:left;
+            width:70%;
+            height:400px;
+            float:left;
 
-            width: 100%;
+            //width: 100%;
             // width: 500px;
             height: 200px;
             // height: 100%;
@@ -294,7 +294,7 @@ title: Math, Sonification, Plots
             // float:left;
             // position:relative;
             // position:absolute;
-            overflow-y: scroll;
+            //overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
         }
