--- a/index.html
+++ b/index.html
@@ -288,9 +288,9 @@ title: Math, Sonification, Plots
 
             //width: 100%;
             // width: 500px;
-            height: 200px;
+            //height: 200px;
             // height: 100%;
-            display:inline-block;
+            //display:inline-block;
             // float:left;
             // position:relative;
             // position:absolute;
