--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ title: Math, Sonification, Plots
         */
 
         .floatButton {
-            //width:30%;
+            width:30%;
             //height:400px;
             //float:left;
             
-            width: 220px;
+            //width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
             // display:inline-block;
@@ -295,7 +295,7 @@ title: Math, Sonification, Plots
             // position:relative;
             // position:absolute;
             //overflow-y: scroll;
-            // padding: 0px 10px 0px 10px;
+            padding: 30px 10px 30px 10px;
             // border: 3px solid #73AD21;
         }
     </style>
