--- a/index.html
+++ b/index.html
@@ -269,11 +269,11 @@ title: Math, Sonification, Plots
         */
 
         .floatButton {
-            width:30%;
+            //width:30%;
             //height:400px;
             //float:left;
             
-            //width: 220px;
+            width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
             // display:inline-block;
@@ -282,13 +282,13 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            width:70%;
-            height:400px;
+            width:60%;
+            //height:400px;
             float:left;
 
             //width: 100%;
             // width: 500px;
-            //height: 200px;
+            height: 200px;
             // height: 100%;
             //display:inline-block;
             // float:left;
