--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            width:60%;
+            width:70%;
             //height:400px;
             float:left;
 
@@ -292,10 +292,10 @@ title: Math, Sonification, Plots
             // height: 100%;
             //display:inline-block;
             // float:left;
-            // position:relative;
+            position:relative;
             // position:absolute;
             //overflow-y: scroll;
-            padding: 30px 10px 30px 10px;
+            //padding: 30px 10px 30px 10px;
             // border: 3px solid #73AD21;
         }
     </style>
