--- a/index.html
+++ b/index.html
@@ -288,8 +288,8 @@ title: Math, Sonification, Plots
             
             width: 500px;
             height: 200px;
-            //display:inline-block;
-            float:left;
+            display:inline-block;
+            //float:left;
             position:relative;
             // position:absolute;
             //overflow-y: scroll;
