--- a/index.html
+++ b/index.html
@@ -269,10 +269,6 @@ title: Math, Sonification, Plots
         */
 
         .floatButton {
-            //width:30%;
-            //height:400px;
-            //float:left;
-            
             width: 220px;
             height: 100%;
             // transform: scale(.5, .5);
@@ -282,17 +278,14 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            //width:70%;
-            //height:400px;
-            //float:left;
-            
-            width: 500px;
-            height: 200px;
+            width:60%;
+            //width: 500px;
+            height: 100px;
             display:inline-block;
-            //float:left;
+            // float:left;
             position:relative;
             // position:absolute;
-            //overflow-y: scroll;
+            overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
         }
