--- a/index.html
+++ b/index.html
@@ -278,9 +278,9 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            width:60%;
-            //width: 500px;
-            height: 100px;
+            //width:60%;
+            width: 500px;
+            height: 200px;
             display:inline-block;
             // float:left;
             position:relative;
