--- a/index.html
+++ b/index.html
@@ -278,11 +278,12 @@ title: Math, Sonification, Plots
         }
 
         .floatWarning {
-            //width:60%;
-            width: 500px;
+            width:60%;
+            //width: 500px;
             height: 200px;
             display:inline-block;
             // float:left;
+            top: -10px;
             position:relative;
             // position:absolute;
             overflow-y: scroll;
