--- a/index.html
+++ b/index.html
@@ -283,9 +283,8 @@ title: Math, Sonification, Plots
             height: 200px;
             display:inline-block;
             // float:left;
-            top: -10px;
-            position:relative;
-            // position:absolute;
+            //position:relative;
+            position:absolute;
             overflow-y: scroll;
             // padding: 0px 10px 0px 10px;
             // border: 3px solid #73AD21;
@@ -347,6 +346,7 @@ title: Math, Sonification, Plots
                 Note that the native browser on iPhone does not support volume control from the application.
             </p></div>
         </div>
+        <br style="clear:both" />
 
         <script>
             var playButton = document.getElementById("playButton")
