--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -230,7 +230,7 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%    {left:50%; top:15%;}
             10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);}
-            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg);}
+            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg); scale(3.75);}
             30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
             40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
             50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
