--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -229,8 +229,10 @@ title: Math, Sonification, Plots
         /* Standard syntax */
         @keyframes tracePlt {
             0%    {left:50%; top:15%;}
-            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg); transform:scale(0.5);}
-            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg); transform:scale(4.0);}
+            10%   {rotate(10deg);  left:74%; top:24%; rotate(-10deg);  transform:scale(1.5);}
+            15%   {transform:scale(0.5);}
+            20%   {rotate(170deg); left:28%; top:30%; rotate(-170deg); transform:scale(2.0);}
+            
             30%   {rotate(10deg);  left:62%; top:36%; rotate(-10deg);}
             40%   {rotate(170deg); left:44%; top:42%; rotate(-170deg);}
             50%   {rotate(10deg);  left:54%; top:48%; rotate(-10deg);}
