--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -239,15 +239,15 @@ title: Math, Sonification, Plots
             45%  {transform:scale(1.0);}
             50%  {rotate(10deg);  left:54%; top:48%; rotate(-10deg);  transform:scale(1.5);}
             55%  {transform:scale(1.0);}
-            60%  {rotate(170deg); left:42%; top:54%; rotate(-170deg);}
+            60%  {rotate(170deg); left:42%; top:54%; rotate(-170deg); transform:scale(1.5);}
             65%  {transform:scale(0.75);}
-            70%  {rotate(10deg);  left:63%; top:58%; rotate(-10deg);}
-            75%  {transform:scale(0.5);}
-            80%  {rotate(170deg); left:32%; top:64%; rotate(-170deg);}
+            70%  {rotate(10deg);  left:63%; top:58%; rotate(-10deg);  transform:scale(1.5);}
+            75%  {transform:scale(5.75);}
+            80%  {rotate(170deg); left:32%; top:64%; rotate(-170deg); transform:scale(1.5);}
             85%  {transform:scale(0.5);}
-            90%  {rotate(10deg);  left:72%; top:70%; rotate(-10deg);}
+            90%  {rotate(10deg);  left:72%; top:70%; rotate(-10deg);  transform:scale(1.5);}
             95%  {transform:scale(0.5);}
-            100% {rotate(170deg); left:29%; top:76%; rotate(-170deg);}
+            100% {rotate(170deg); left:29%; top:76%; rotate(-170deg); transform:scale(1.5);}
         }
 
         /*
