--- a/hyperbola/index.html
+++ b/hyperbola/index.html
@@ -230,7 +230,7 @@ title: Math, Sonification, Plots
         @keyframes tracePlt {
             0%   {left:50%; top:15%;}
             10%  {rotate(10deg);  left:74%; top:24%; rotate(-10deg);  transform:scale(1.5);}
-            15%  {transform:scale(3.0);}
+            15%  {top:35%; transform:scale(3.0);}
             20%  {rotate(170deg); left:28%; top:30%; rotate(-170deg); transform:scale(1.5);}
             25%  {transform:scale(0.5);}
             30%  {rotate(10deg);  left:62%; top:36%; rotate(-10deg);  transform:scale(1.5);}
@@ -238,15 +238,15 @@ title: Math, Sonification, Plots
             40%  {rotate(170deg); left:44%; top:42%; rotate(-170deg); transform:scale(1.5);}
             45%  {transform:scale(0.75);}
             50%  {rotate(10deg);  left:54%; top:48%; rotate(-10deg);  transform:scale(1.5);}
-            55%  {transform:scale(0.75);}
+            55%  {transform:scale(2.0);}
             60%  {rotate(170deg); left:42%; top:54%; rotate(-170deg); transform:scale(1.5);}
-            65%  {transform:scale(2.0);}
+            65%  {transform:scale(0.75);}
             70%  {rotate(10deg);  left:63%; top:58%; rotate(-10deg);  transform:scale(1.5);}
-            75%  {transform:scale(0.5);}
+            75%  {transform:scale(3.0);}
             80%  {rotate(170deg); left:32%; top:64%; rotate(-170deg); transform:scale(1.5);}
-            85%  {transform:scale(3.0);}
+            85%  {transform:scale(0.5);}
             90%  {rotate(10deg);  left:72%; top:70%; rotate(-10deg);  transform:scale(1.5);}
-            95%  {transform:scale(0.25);}
+            95%  {transform:scale(3.5);}
             100% {rotate(170deg); left:29%; top:76%; rotate(-170deg); transform:scale(1.5);}
         }
 
