--- a/index.html
+++ b/index.html
@@ -319,7 +319,8 @@ title: Math, Sonification, Plots
             // position:relative;
             position:absolute;
             overflow-y: scroll;
-            padding: 0px 10px 0px 10px;
+            padding: 10px 10px 10px 10px;
+            p { display: inline }
             border: 3px solid #73AD21;
         }
     </style>
