--- a/index.html
+++ b/index.html
@@ -134,6 +134,28 @@ title: Math, Sonification, Plots
                 // background-color: black;
         }
 
+        .floatButton {
+            width: 220px;
+            height: 100%;
+            // transform: scale(.5, .5);
+            // display:inline-block;
+            float:left;
+            // border: 3px solid #73AD21;
+        }
+
+        .floatWarning {
+            width:40%;
+            // width: 500px;
+            height: 200px;
+            display:inline-block;
+            // float:left;
+            // position:relative;
+            position:absolute;
+            overflow-y: scroll;
+            padding: 10px 10px 10px 10px;
+            border: 3px solid #73AD21;
+        }
+
         #myAnimation {
                 width: 20px;
                 height: 20px;
@@ -300,28 +322,6 @@ title: Math, Sonification, Plots
             to   { transform: rotate(360deg) translateX(150px) rotate(-360deg); }
         }
         */
-
-        .floatButton {
-            width: 220px;
-            height: 100%;
-            // transform: scale(.5, .5);
-            // display:inline-block;
-            float:left;
-            // border: 3px solid #73AD21;
-        }
-
-        .floatWarning {
-            width:40%;
-            // width: 500px;
-            height: 200px;
-            display:inline-block;
-            // float:left;
-            // position:relative;
-            position:absolute;
-            overflow-y: scroll;
-            padding: 10px 10px 10px 10px;
-            border: 3px solid #73AD21;
-        }
     </style>
 </head>
 
@@ -347,7 +347,7 @@ title: Math, Sonification, Plots
     <br>
     <div><p>
         The results from the survey will advance research for developing better technologies that improve 
-        accessibility to digital media by the visually impaired. This project will culminate with a paper 
+        accessibility to digital media by the visually impaired. This project will culminate with a 
         <a href="/AssistiveTechnology_VisuallyImpaired.pdf"
         target="_blank">paper</a>
         commensurable for publication.
